# Mithril-Wapper

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-libzt.yml  build.yml  development.yml
Mithril-Wapper-cpp/: includes.h  init.cpp
Mithril-Wapper-cpp/egl/: egl.mm
Mithril-Wapper-cpp/gl/: buffer.cpp  debug.cpp  drawing.cpp  framebuffer.cpp  framebuffer.h  getter.cpp  getter_gpu.mm  gl.cpp  log.cpp  log.h  program.cpp  shader.cpp  shader.h  state.cpp  state.h  stubs.cpp  texture.cpp  vertexattrib.cpp
Mithril-Wapper-cpp/glx/: lookup.cpp
Mithril-Wapper-cpp/include/EGL/: egl.h
Mithril-Wapper-cpp/include/GL/: gl.h  glcorearb.h
Mithril-Wapper-cpp/include/KHR/: khrplatform.h
Mithril-Wapper-cpp/metal/: metal_context.h  metal_context.mm  metal_objects.h  metal_objects.mm  metal_pipeline.h  metal_pipeline.mm
Natives/: LauncherPreferences.m  ModService.m  ModUpdateService.m  ModUpdateViewController.m  egl_bridge.m  utils.h
Natives/ctxbridges/: gl_bridge.m
Natives/installer/modpack/: CurseForgeAPI.h  CurseForgeAPI.m
include/GL/: glcorearb.h
include/KHR/: khrplatform.h
src/: buffer.cpp  drawing.cpp  framebuffer.cpp  framebuffer.h  getter.cpp  gl.cpp  includes.h  init.cpp  log.cpp  log.h  program.cpp  shader.cpp  shader.h  state.cpp  state.h  stubs.cpp  texture.cpp  vertexattrib.cpp
src/glx/: lookup.cpp
src/metal/: metal_context.h  metal_context.mm  metal_objects.h  metal_objects.mm  metal_pipeline.h  metal_pipeline.mm
